Adjust default virtual memory settings

--- a/5.0/Dockerfile
+++ b/5.0/Dockerfile
@@ -49,6 +49,8 @@ VOLUME /usr/share/elasticsearch/data
 
 COPY docker-entrypoint.sh /
 
+RUN sysctl -w vm.max_map_count=262144
+
 EXPOSE 9200 9300
 ENTRYPOINT ["/docker-entrypoint.sh"]
 CMD ["elasticsearch"]
